Criação da tela principal

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <main>
+
         <section id="aplicativos">
 
         </section>
 
         <section id="celular">
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
+
     </main>
 </body>
 </html>
