--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
         <section id="aplicativos">
 
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a>
+            <a href="imagens/tela-home.jpg" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="imagens/tela-facebook.jpg" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
+            <a href="imagens/tela-github.jpg" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="imagens/tela-instagram.jpg" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="imagens/tela-twitter.jpg" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="imagens/tela-youtube.png" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a>
 
         </section>
 
